# 650610832_final

./: .gitignore  server_node copy.py  service_node copy.py  service_node_1.py  service_old.py
install/: local_setup.sh  setup.sh
install/my_interface/share/my_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  robot_control_launch.py
install/robot_control/lib/robot_control/: server_node  service_node
install/robot_control/share/robot_control/: package.sh  package.xml
install/server_node/lib/server_node/: server_node
install/server_node/share/server_node/: package.dsv  package.ps1  package.sh  package.xml
install/service_node/lib/service_node/: service_node
install/service_node/share/service_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/my_interface/: CMakeLists.txt
src/my_interface/launch/: robot_control_launch.py
src/my_interface/srv/: StopRobot.srv
src/robot_control/: CMakeLists.txt  package.xml  setup.py
src/robot_control/robot_control/: server_node.py  service_node.py
src/robot_control/srv/: ControlRobot.srv
src/server_node/: package.xml  setup.cfg  setup.py
src/server_node/server_node/: server_node copy.py  server_node.py  server_node_ref.py
src/service_node/: package.xml  setup.cfg  setup.py
src/service_node/service_node/: service_node copy.py  service_node.py  service_node_ref.py
src/turtlebot_node/: package.xml  setup.py
src/turtlebot_node/turtlebot_node/: turtlebot_node.py
(+104 files in other folders)
